added new lines of code and updated directories

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                 </div>
 
                 <div class="showcase-image">
-                    <img src="./img/handsfold-alt.png" alt="">
-                    <img src="./img/colorgrid2.png" class="shape dots" alt="">
-                    <img src="./img/rectangle.png" class="shape rectangle" alt="">
-                    <img src="./img/rectangle.png" class="shape rectangle1" alt="">
-                    <img src="./img/colorgrid2.png" class="shape dots1" alt="">
-                    <img src="./img/colorgrid3.png" class="shape dots2" alt="">
+                    <img src="./img/handsfold-alt.png">
+                    <img src="./img/colorgrid2.png" class="shape dots">
+                    <img src="./img/rectangle.png" class="shape rectangle">
+                    <img src="./img/rectangle.png" class="shape rectangle1">
+                    <img src="./img/colorgrid2.png" class="shape dots1">
+                    <img src="./img/colorgrid3.png" class="shape dots2">
                 </div>
             </div>
         </section>
@@ -132,7 +132,7 @@
                 </div>
                 
                 <div class="about-info">
-                    <img src="./img/colorgrid1.png" class="shape about-dots" alt="">
+                    <img src="./img/colorgrid1.png" class="shape about-dots">
 
                     <h2 class="sub-heading">What I do</h2>
                     <h1 class="heading">Better Designs,<br> Better Experience</h1>
@@ -160,15 +160,15 @@
                         <a href="#" class="btn">Hire me</a>
                     </div>
 
-                    <img src="./img/colorgrid3.png" class="skills dots2" alt="">
+                    <img src="./img/colorgrid3.png" class="skills dots2">
                 </div>
             </div>
         </section>
 
         <!-- My services -->
         <section class="services section">
-            <img src="./img/colorgrid4.png" alt="" class="grid">
-            <img src="./img/colorgrid3.png" alt="" class="grid2">
+            <img src="./img/colorgrid4.png" class="grid">
+            <img src="./img/colorgrid3.png" class="grid2">
             <div class="container">
                 <div class="services-info">
                     <h3 class="sub-heading">My Services</h3>
@@ -242,6 +242,27 @@
 
         <!-- Portfolio -->
         <section class="portfolio section">
+            <div class="modal">
+                <div class="modal-overlay">
+
+                </div>
+                <div class="slider-wrap">
+                    <div class="prev-btn navigation">
+                        <i class="uil uil-angle-left-b"></i>
+                    </div>
+                    <div class="images">
+                        <img src="./img/port1.png" class="showImage">
+                        <img src="./img/port2.png" class="showImage">
+                        <img src="./img/port3.png" class="showImage">
+                        <img src="./img/port4.png" class="showImage">
+                        <img src="./img/port5.png" class="showImage">
+                        <img src="./img/port6.png" class="showImage">
+                    </div>
+                    <div class="next-btn navigation">
+                        <i class="uil uil-angle-right-b"></i>
+                    </div>
+                </div>
+            </div>
             <div class="container">
                 <div class="portfolio-header">
                     <div class="portfolio-title">
@@ -250,18 +271,18 @@
                     </div>
 
                     <div class="filter-btns">
-                        <button class="filter-btn">All</button>
-                        <button class="filter-btn">UI/UX Design</button>
-                        <button class="filter-btn">Graphics Design</button>
-                        <button class="filter-btn">Frontend Development</button>
-                        <button class="filter-btn">No-Code Development</button>
+                        <button class="filter-btn" data-filter=".all">All</button>
+                        <button class="filter-btn" data-filter=".ui-ux">UI/UX Design</button>
+                        <button class="filter-btn" data-filter=".graphics">Graphics Design</button>
+                        <button class="filter-btn" data-filter=".frontend">Frontend Development</button>
+                        <button class="filter-btn" data-filter=".no-code">No-Code Development</button>
                     </div>
                 </div>
 
-                <div class="portfolio-gallery">
-                    <div class="prt-card">
+                <div class="portfolio-gallery" >
+                    <div class="mix prt-card ui-ux all">
                         <div class="prt-image">
-                            <img src="./img/Presentation.png" alt="">
+                            <img src="./img/port1.png">
                             <div class="prt-overlay">
                                 <span class="prt-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
@@ -277,9 +298,9 @@
                             <a href="#" class="btn secondary-btn sm">Read more</a>
                         </div>
                     </div>
-                    <div class="prt-card">
+                    <div class="mix prt-card ui-ux all">
                         <div class="prt-image">
-                            <img src="./img/07-Notebook-Mockup.png" alt="">
+                            <img src="./img/port2.png">
                             <div class="prt-overlay">
                                 <span class="prt-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
@@ -295,9 +316,9 @@
                             <a href="#" class="btn secondary-btn sm">Read more</a>
                         </div>
                     </div>
-                    <div class="prt-card">
+                    <div class="mix prt-card graphics all">
                         <div class="prt-image">
-                            <img src="./img/April New Month.png" alt="">
+                            <img src="./img/port3.png">
                             <div class="prt-overlay">
                                 <span class="prt-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
@@ -313,9 +334,9 @@
                             <a href="#" class="btn secondary-btn sm">Read more</a>
                         </div>
                     </div>
-                    <div class="prt-card">
+                    <div class="mix prt-card ui-ux all">
                         <div class="prt-image">
-                            <img src="./img/Presentation – 1.png" alt="">
+                            <img src="./img/port4.png">
                             <div class="prt-overlay">
                                 <span class="prt-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
@@ -331,9 +352,9 @@
                             <a href="#" class="btn secondary-btn sm">Read more</a>
                         </div>
                     </div>
-                    <div class="prt-card">
+                    <div class="mix prt-card ui-ux all">
                         <div class="prt-image">
-                            <img src="./img/Crypto UI Landing page.png" alt="">
+                            <img src="./img/port5.png">
                             <div class="prt-overlay">
                                 <span class="prt-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
@@ -349,9 +370,9 @@
                             <a href="#" class="btn secondary-btn sm">Read more</a>
                         </div>
                     </div>
-                    <div class="prt-card">
+                    <div class="mix prt-card no-code all ui-ux">
                         <div class="prt-image">
-                            <img src="./img/Tribe.png" alt="">
+                            <img src="./img/port6.png">
                             <div class="prt-overlay">
                                 <span class="prt-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
@@ -378,10 +399,8 @@
 
 
 
-
-
     <!-- JavaScript file -->
-    
+    <script src="./js/mixitup.min.js"></script>
     <script src="./js/script.js"></script>
 
 </body>
