made changes to html and css files

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <title>Ottobong Christopher</title>
 </head>
 <body>
+
+    <!-- Nav bar -->
     <header>
         <nav class="container">
 
@@ -251,12 +253,12 @@
                         <i class="uil uil-angle-left-b"></i>
                     </div>
                     <div class="images">
-                        <img src="./img/port1.png" class="showImage">
-                        <img src="./img/port2.png" class="showImage">
-                        <img src="./img/port3.png" class="showImage">
-                        <img src="./img/port4.png" class="showImage">
-                        <img src="./img/port5.png" class="showImage">
-                        <img src="./img/port6.png" class="showImage">
+                        <img class="showImage" src="./img/port1.png">
+                        <img src="./img/port2.png">
+                        <img src="./img/port3.png">
+                        <img src="./img/port4.png">
+                        <img src="./img/port5.png">
+                        <img src="./img/port6.png">
                     </div>
                     <div class="next-btn navigation">
                         <i class="uil uil-angle-right-b"></i>
@@ -284,7 +286,7 @@
                         <div class="prt-image">
                             <img src="./img/port1.png">
                             <div class="prt-overlay">
-                                <span class="prt-icon" style="--i: .0s">
+                                <span class="prt-icon zoom-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
                                 </span>
                                 <a href="#" class="prt-icon" style="--i: .15s">
@@ -302,7 +304,7 @@
                         <div class="prt-image">
                             <img src="./img/port2.png">
                             <div class="prt-overlay">
-                                <span class="prt-icon" style="--i: .0s">
+                                <span class="prt-icon zoom-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
                                 </span>
                                 <a href="#" class="prt-icon" style="--i: .15s">
@@ -320,7 +322,7 @@
                         <div class="prt-image">
                             <img src="./img/port3.png">
                             <div class="prt-overlay">
-                                <span class="prt-icon" style="--i: .0s">
+                                <span class="prt-icon zoom-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
                                 </span>
                                 <a href="#" class="prt-icon" style="--i: .15s">
@@ -338,7 +340,7 @@
                         <div class="prt-image">
                             <img src="./img/port4.png">
                             <div class="prt-overlay">
-                                <span class="prt-icon" style="--i: .0s">
+                                <span class="prt-icon zoom-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
                                 </span>
                                 <a href="#" class="prt-icon" style="--i: .15s">
@@ -356,7 +358,7 @@
                         <div class="prt-image">
                             <img src="./img/port5.png">
                             <div class="prt-overlay">
-                                <span class="prt-icon" style="--i: .0s">
+                                <span class="prt-icon zoom-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
                                 </span>
                                 <a href="#" class="prt-icon" style="--i: .15s">
@@ -374,7 +376,7 @@
                         <div class="prt-image">
                             <img src="./img/port6.png">
                             <div class="prt-overlay">
-                                <span class="prt-icon" style="--i: .0s">
+                                <span class="prt-icon zoom-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
                                 </span>
                                 <a href="#" class="prt-icon" style="--i: .15s">
@@ -389,6 +391,34 @@
                         </div>
                     </div>
                     
+                </div>
+            </div>
+        </section>
+
+        <!-- Testimonial -->
+        <!-- <section class="testimonial section">
+            <div class="container">
+                <div class="section-background">
+                    <img src="./img/smiling-alt.png" class="person">
+                </div>
+                <div class="reviews"></div>
+                <div class="testimonial-title">
+                    <h3 class="sub-heading">Testimonials</h3>
+                    <h1 class="heading">Hear from my happy clients</h1>
+                </div>
+            </div>
+        </section> -->
+
+        <section class="contact section">
+            <div class="container">
+                <div class="contact-info">
+                    <h3 class="sub-heading">Contact me</h3>
+                    <h1 class="heading">Contact me</h1>
+                    <p class="text">
+                        Do you have an idea you would like to build? You can reach out to me now!
+                    </p>
+
+                    <a href="mailto:christopherottobong@gmail.com" class="mail">christopherottobong@gmail.com <i class="uil uil-arrow-right"></i></a>
                 </div>
             </div>
         </section>
