--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="container">
 
             <a href="#">
-                <img src="./img/logo.svg" alt="ottobong Christopher" class="logo">
+                <img src="./img/logo.svg" alt="Ottobong Christopher" class="logo">
             </a>
 
             <div class="links">
