added new lines of code

--- a/index.html
+++ b/index.html
@@ -449,22 +449,22 @@
             <p class="text">&copy; Copyright 2022. All rights reserved</p>
             <ul class="social-media">
                 <li>
-                    <a href="#" class="social-link">
+                    <a href="https://github.com/ottobong" target="_blank" class="social-link">
                         <i class="uil uil-github"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="social-link">
+                    <a href="https://www.behance.net/ottobonchristo" class="social-link" target="_blank">
                         <i class="uil uil-behance"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="social-link">
+                    <a href="https://www.linkedin.com/in/ottobong-christopher/" target="_blank" class="social-link">
                         <i class="uil uil-linkedin"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="social-link">
+                    <a href="https://twitter.com/ottobongchris" class="social-link" target="_blank">
                         <i class="uil uil-twitter"></i>
                     </a>
                 </li>
