--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                 <i class="uil uil-moon toggle-btn"></i>
             </div>
 
+            <div class="hamburger">
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+
 
         </nav>
     </header>
