--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             </div>
 
             <div class="hamburger">
+                <!-- <i class="uil uil-align-center-alt"></i> -->
+
+                <div class="bar"></div>
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
