--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Ottobong Christopher</title>
 </head>
 <body>
-
+    <div class="overlay"></div>
     <!-- Nav bar -->
     <header>
         <nav class="container">
