--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="container">
                 <div class="showcase-info">
                     <h2 class="sub-heading">Product Designer | Frontend Developer</h2>
-                    <h1 class="heading">Ottobong Christopher.</h1>
+                    <h1 class="heading">Ottobong <br>  Christopher.</h1>
                     <p class="text">I am a product designer and frontend developer with a passion for building user centered products. Let's work together.</p>
 
                     <div class="cta">
